# chinaVoiceAlOnDevice

./: .gitignore  README.md  check_tensors.py  download_v12.py  download_v14.py  hf_headers.txt  nllb_server.py  settings.gradle.kts  update_sherpa.py
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/sherpa-onnx-zipformer-multi-zh-hans/: tokens.txt
app/src/main/cpp/: CMakeLists.txt  onnxruntime_ep_c_api.h  stt.cpp
app/src/main/java/com/example/stt/: DownloadUtils.kt  MainActivity.kt  NllbTokenizer.kt  PinyinMapper.kt  TranslationEngine.kt
